--- a/plugin.xml
+++ b/plugin.xml
@@ -298,6 +298,10 @@
             src="src/android/fawzone/sound/ResumeSoundReceiver.java"
             target-dir="src/org/fawzone/sound" />
 
+        <source-file
+            src="src/android/fawzone/vibration/VibrationManager.java"
+            target-dir="src/org/fawzone/vibration" />
+
     </platform>
 
     <!-- windows -->
